--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>SM64 Battleships</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="base64js.min.js"></script>
+  <script src="prng.js"></script>
   <script src="script.js"></script>
 </head>
+
 <body>
-  <div id="board"></div>
+  <div id="main">
+    <div id="board"></div>
+  </div>
+  <div id="controls">
+    <label for="colCount">Columns: </label><input type="number" id="colCount" value="10" step="1" min="0" max="20" />
+    <label for="seedBox">Seed:</label><input type="text" id="seedText" />
+    <input type="button" id="genSeedButton" value="Random Seed" />
+    <input type="button" id="setSeedButton" value="Set seed" />
+    <input id="nightBtn" type="button" value="toggle night mode" />
+  </div>
 </body>
+
 </html>
