replace SO prng with seedrandom

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SM64 Battleships</title>
   <link rel="stylesheet" href="style.css" />
   <script src="base64js.min.js"></script>
-  <script src="prng.js"></script>
+  <script src="seedrandom.min.js"></script>
   <script src="script.js"></script>
 </head>
 
