--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <div id="main">
     <div id="board"></div>
   </div>
+  <div id="search">
+    <input type="text" id="searchBox" placeholder="Search" />
+    <input id="clearSearchBtn" type="button" value="Clear" />
+  </div>
   <div id="controls">
     <label for="colCount">Columns: </label><input type="number" id="colCount" value="10" step="1" min="0" max="20" />
     <label for="seedBox">Seed:</label><input type="text" id="seedText" />
