--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>SM64 Battleships</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="jscolor.min.js"></script>
   <script src="base64js.min.js"></script>
   <script src="seedrandom.min.js"></script>
   <script src="script.js"></script>
@@ -24,6 +25,8 @@
     <input type="button" id="genSeedButton" value="Random Seed" />
     <input type="button" id="setSeedButton" value="Set seed" />
     <input id="nightBtn" type="button" value="toggle night mode" />
+    <div id="colorsPicker">
+    </div>
   </div>
 </body>
 
