make color picker hidden by default

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <input type="button" id="genSeedButton" value="Random Seed" />
     <input type="button" id="setSeedButton" value="Set seed" />
     <input id="nightBtn" type="button" value="toggle night mode" />
-    <div id="colorsPicker">
+    <input id="colorPickerBtn" type="button" value="toggle color picker" />
+    <div id="colorsPicker" class="hidden">
     </div>
   </div>
 </body>
