--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
   <div id="main">
     <div id="board"></div>
   </div>
-  <div id="search">
-    <input type="text" id="searchBox" placeholder="Search" />
-    <input id="clearSearchBtn" type="button" value="Clear" />
-  </div>
   <div id="controls">
-    <label for="colCount">Columns: </label><input type="number" id="colCount" value="10" step="1" min="0" max="20" />
-    <label for="seedBox">Seed:</label><input type="text" id="seedText" />
-    <input type="button" id="genSeedButton" value="Random Seed" />
-    <input type="button" id="setSeedButton" value="Set seed" />
-    <input id="nightBtn" type="button" value="toggle night mode" />
-    <input id="colorPickerBtn" type="button" value="toggle color picker" />
+    <div id="search">
+      <input type="text" id="searchBox" placeholder="Search" />
+      <input id="clearSearchBtn" type="button" value="Clear" />
+    </div>  
+    <div id="layoutControls">
+      <label for="colCount">Columns: </label><input type="number" id="colCount" value="10" step="1" min="0" max="20" />
+      <label for="seedBox">Seed:</label><input type="text" id="seedText" />
+      <input type="button" id="genSeedButton" value="Random Seed" />
+      <input type="button" id="setSeedButton" value="Set seed" />
+      <input id="nightBtn" type="button" value="Toggle night mode" />
+      <input id="colorPickerBtn" type="button" value="Toggle color picker" />
+    </div>
+    <div id="markingsSaverLoader">
+      <input type="file" id="markingsFile"/>
+      <input type="button" id="loadMarkingsBtn" value="Load markings from file" />
+      <input type="button" id="saveMarkingsBtn" value="Save markings to file" />
+    </div>
     <div id="colorsPicker" class="hidden">
     </div>
   </div>
